<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.test.view.ChartPolyLineViewOld
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"
            custom:chart_type="0"
            custom:polyline_bottom_color="@color/chart_polyline_speed_bottom_color"
            custom:polyline_left_message="@string/message_left_speed"
            custom:polyline_right_message="@string/message_right_speed"
            custom:polyline_title="@string/title_speed"
            custom:polyline_top_color="@color/chart_polyline_speed_top_color"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/chart_space_line_color"/>
        <com.test.view.ChartPolyLineViewOld
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"
            custom:chart_type="1"
            custom:polyline_bottom_color="@color/chart_polyline_heart_bottom_color"
            custom:polyline_left_message="@string/message_left_heart"
            custom:polyline_right_message="@string/message_right_heart"
            custom:polyline_title="@string/title_heart"
            custom:polyline_top_color="@color/chart_polyline_heart_top_color"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/chart_space_line_color"/>
        <com.test.view.ChartPolyLineViewOld
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"
            custom:chart_type="2"
            custom:polyline_bottom_color="@color/chart_polyline_high_bottom_color"
            custom:polyline_left_message="@string/message_left_high"
            custom:polyline_right_message="@string/message_right_high"
            custom:polyline_title="@string/title_height"
            custom:polyline_top_color="@color/chart_polyline_high_top_color"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/chart_space_line_color"/>
        <com.test.view.ChartPolyLineViewOld
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"
            custom:chart_type="3"
            custom:polyline_bottom_color="@color/chart_polyline_freq_bottom_color"
            custom:polyline_left_message="@string/message_left_freq"
            custom:polyline_right_message="@string/message_right_freq"
            custom:polyline_title="@string/title_freq"
            custom:polyline_top_color="@color/chart_polyline_freq_top_color"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/chart_space_line_color"/>
        <com.test.view.ChartPolyLineViewOld
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"
            custom:chart_type="4"
            custom:polyline_bottom_color="@color/chart_polyline_temp_bottom_color"
            custom:polyline_left_message="@string/message_left_temp"
            custom:polyline_right_message="@string/message_right_temp"
            custom:polyline_title="@string/title_temp"
            custom:polyline_top_color="@color/chart_polyline_temp_top_color"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/chart_space_line_color"/>
    </LinearLayout>
</ScrollView>